--- a/organizeme/package.json
+++ b/organizeme/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@react-native-community/blur": "^4.4.0",
     "expo": "~51.0.9",
+    "expo-blur": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
-    "expo-blur": "~13.0.2"
+    "react-native": "^0.74.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
