--- a/suas-financas-frontend/package.json
+++ b/suas-financas-frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
+    "cookies": "^0.9.1",
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -32,6 +33,7 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "ionicons": "^7.4.0",
+    "js-cookie": "^3.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
